--- a/CSS/CSS Presentation/LoremIpsumPage/index.html
+++ b/CSS/CSS Presentation/LoremIpsumPage/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Lorem ipsum page</title>
+  <title>Lorem Ipsum Page</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl sapien, bibendum in libero eget,
-    imperdiet pellentesque mauris. Praesent quis elit sed nunc cursus sodales non quis erat. Praesent id metus
-    nisi. Nam bibendum scelerisque mauris. Pellentesque a ex sit amet lacus aliquam tincidunt. Aliquam id mi ac
-    urna placerat suscipit. Integer eget tellus luctus, sagittis sem sit amet, tincidunt urna. Ut facilisis felis
-    eu elit gravida, eget fermentum elit fringilla. Fusce et ante vitae lorem fringilla varius. Etiam metus dolor,
-    gravida eu porttitor quis, lacinia in magna. Vivamus ornare libero et quam iaculis dictum.
-</p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ullamcorper enim placerat lacus semper, ac accumsan
+    nibh interdum. Morbi eget finibus tellus. Fusce ut malesuada felis, id elementum enim. Aliquam lacinia egestas nisl,
+    vitae bibendum nisi ultricies sed. In vel arcu nec enim placerat gravida. Aliquam eget nisi non odio pulvinar faucibus
+    eu non lacus. Integer ultrices lectus egestas tellus fermentum semper. Cras quis magna rutrum, dapibus felis ac, interdum
+    ante. Nunc pretium varius urna quis sodales. Donec porta turpis congue, malesuada magna vitae, posuere est. Maecenas
+    id consequat nisi, non laoreet risus. Pellentesque scelerisque hendrerit pharetra. Aliquam condimentum purus eu vehicula
+    ultrices.
+  </p>
 </body>
+
 </html>
