--- a/CSS/CSS Presentation/NestedDivs/index.html
+++ b/CSS/CSS Presentation/NestedDivs/index.html
@@ -1,22 +1,129 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Nested Divs</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div><div><div><div><div><div><div><div><div><div>
-    <div><div><div><div><div><div><div><div><div><div>
-    <div><div><div><div><div><div><div><div><div><div>
-    <div><div><div><div><div><div><div><div><div><div>
-    <div><div><div><div><div><div><div><div><div><div>
-    <div><div><div><div><div><div><div><div><div><div>
-    </div></div></div></div></div></div></div></div></div></div>
-    </div></div></div></div></div></div></div></div></div></div>
-    </div></div></div></div></div></div></div></div></div></div>
-    </div></div></div></div></div></div></div></div></div></div>
-    </div></div></div></div></div></div></div></div></div></div>
-    </div></div></div></div></div></div></div></div></div></div>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Nested Divs</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+ <div>
+   <div>
+     <div>
+       <div>
+         <div>
+           <div>
+             <div>
+               <div>
+                 <div>
+                   <div>
+                     <div>
+                       <div>
+                         <div>
+                           <div>
+                             <div>
+                               <div>
+                                 <div>
+                                   <div>
+                                     <div>
+                                       <div>
+                                         <div>
+                                           <div>
+                                             <div>
+                                               <div>
+                                                 <div>
+                                                   <div>
+                                                     <div>
+                                                       <div>
+                                                         <div>
+                                                           <div>
+                                                             <div>
+                                                               <div>
+                                                                 <div>
+                                                                   <div>
+                                                                     <div>
+                                                                       <div>
+                                                                         <div>
+                                                                           <div>
+                                                                             <div>
+                                                                               <div>
+                                                                                 <div>
+                                                                                   <div>
+                                                                                     <div>
+                                                                                       <div>
+                                                                                         <div>
+                                                                                           <div>
+                                                                                             <div>
+                                                                                               <div>
+                                                                                                 <div>
+                                                                                                   <div>
+                                                                                                     <div>
+                                                                                                       <div>
+                                                                                                         <div>
+                                                                                                           <div>
+                                                                                                             <div>
+                                                                                                               <div>
+                                                                                                                 <div>
+                                                                                                                   <div>
+                                                                                                                     <div>
+                                                                                                                       <div></div>
+                                                                                                                     </div>
+                                                                                                                   </div>
+                                                                                                                 </div>
+                                                                                                               </div>
+                                                                                                             </div>
+                                                                                                           </div>
+                                                                                                         </div>
+                                                                                                       </div>
+                                                                                                     </div>
+                                                                                                   </div>
+                                                                                                 </div>
+                                                                                               </div>
+                                                                                             </div>
+                                                                                           </div>
+                                                                                         </div>
+                                                                                       </div>
+                                                                                     </div>
+                                                                                   </div>
+                                                                                 </div>
+                                                                               </div>
+                                                                             </div>
+                                                                           </div>
+                                                                         </div>
+                                                                       </div>
+                                                                     </div>
+                                                                   </div>
+                                                                 </div>
+                                                               </div>
+                                                             </div>
+                                                           </div>
+                                                         </div>
+                                                       </div>
+                                                     </div>
+                                                   </div>
+                                                 </div>
+                                               </div>
+                                             </div>
+                                           </div>
+                                         </div>
+                                       </div>
+                                     </div>
+                                   </div>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+</body>
 </html>
